# company

./: .gitignore  00_MASTER_SPEC.md  PROGRESS.md  pyproject.toml  start.py
.claude/: settings.json  settings.local.json
api/: app.py
api/routes/: companies.py  cycles.py  generator.py
api/static/: app.js  company.css  company.html  company.js  index.html  style.css
factory/: __main__.py  autonomy.py  brief.py  cmd_delete.py  cmd_list.py  cmd_status.py  config.py  create.py  errors.py  generator.py  memory.py  registry.py  run.py  templates.py
factory/agents/: __init__.py  analyst.py  base.py  ceo.py  generic.py  risk.py
factory/llm/: __init__.py  anthropic_client.py  base.py  budget_guard.py  mock.py
templates/_portal/: app.py
templates/_portal/static/: app.js  index.html  office.js  style.css
templates/trading/: agents.yaml  company.yaml  constitution.md  memory_schema.yaml  template.yaml  workflow.yaml
tests/: conftest.py  test_agents.py  test_factory_create.py  test_integration_run.py  test_memory.py  test_risk_limits.py
